--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
 
-URI_MONGO=mongodb://localhost:27017/academicSystem
+URI_MONGO=mongodb://localhost:27017/studentControl
 
 SECRETORPRIVATEKEY=M0rt4d3l4
